// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Recombee's setViewPortion destination action: all fields 1`] = `
Object {
  "additionalData": Object {
    "testType": "Np8pbQ",
  },
  "cascadeCreate": true,
  "itemId": "Np8pbQ",
  "portion": 0.1097,
  "recommId": "Np8pbQ",
  "sessionId": "Np8pbQ",
  "timestamp": "Np8pbQ",
  "userId": "Np8pbQ",
}
`;

exports[`Testing snapshot for Recombee's setViewPortion destination action: required fields 1`] = `
Object {
  "additionalData": Object {},
  "cascadeCreate": true,
  "itemId": "Np8pbQ",
  "portion": 0.1097,
  "userId": "Np8pbQ",
}
`;

exports[`Testing snapshot for Recombee's setViewPortion destination action: should fail if portion is larger than 1 1`] = `"Portion cannot be greater than 1."`;

exports[`Testing snapshot for Recombee's setViewPortion destination action: should fail if portion is smaller than 0 1`] = `"Portion cannot be negative."`;
